# litellm

./: .all-contributorsrc  .coderabbit.yaml  .coverage  .cursorrules  .dockerignore  .env.example  .env.example.global  .env.temp  .envrc  .flake8  .git-blame-ignore-revs  .gitattributes  .gitguardian.yaml  .gitignore  .gitlab-ci.yml  .gitmodules  .gitpod.yml  .lit3094-probe  .markdownlint.json  .pre-commit-config.yaml  .readthedocs.yaml  .trivyignore  .vercelignore  .vulture_allowlist.py  ADD_MODEL_CHANGES.md  AGENTS.md  AGENTS_DOCUMENTATION_SUMMARY.md  AI_SLOP.md  APSCHEDULER_MEMORY_LEAK_FIX.md  ARCHITECTURE.md  ARCHITECTURE_CN.md  BAD_REQUEST_ANALYSIS.md  BATCH_FIXES_README.md  BEDROCK_AGENT_CONFIGURATION_GUIDE.md  BEFORE_AFTER_COMPARISON.md  BUNDLE_INSTRUCTIONS.md  CARTO_CLAUDE.md  CHANGELOG.md  CHANGES.md  CHANGES_SUMMARY.md  (+540 more)
enterprise/: LICENSE.md  MANIFEST.in  README.md  pyproject.toml  utils.py
enterprise/callbacks/: api_callback.py  example_logging_api.py  generic_api_callback.py
enterprise/cloudformation_stack/: litellm.yaml
enterprise/enterprise_callbacks/: example_logging_api.py  generic_api_callback.py
enterprise/enterprise_callbacks/send_emails/: base_email.py  endpoints.py  resend_email.py
enterprise/enterprise_hooks/: __init__.py  aporia_ai.py  aporio_ai.py  banned_keywords.py  blocked_user_list.py  google_text_moderation.py  lakera_ai.py  llama_guard.py  llm_guard.py  managed_files.py  openai_moderation.py  parallel_request_limiter_v2.py  prompt_injection_detection.py  secret_detection.py  session_handler.py
enterprise/enterprise_hooks/secrets_plugins/: adafruit.py  adobe.py  age_secret_key.py  airtable_api_key.py  algolia_api_key.py  alibaba.py  asana.py  atlassian_api_token.py  authress_access_key.py  beamer_api_token.py  bitbucket.py  bittrex.py  clojars_api_token.py  codecov_access_token.py  coinbase_access_token.py  confluent.py  contentful_api_token.py  databricks_api_token.py  datadog_access_token.py  defined_networking_api_token.py  digitalocean.py  discord.py  doppler_api_token.py  droneci_access_token.py  dropbox.py  duffel_api_token.py  dynatrace_api_token.py  easypost.py  etsy_access_token.py  facebook_access_token.py  fastly_api_token.py  finicity.py  finnhub_access_token.py  flickr_access_token.py  flutterwave.py  frameio_api_token.py  freshbooks_access_token.py  gcp_api_key.py  github_token.py  gitlab.py  (+54 more)
enterprise/enterprise_ui/: README.md  _enterprise_colors.json
enterprise/litellm_enterprise/: __init__.py
enterprise/litellm_enterprise/enterprise_callbacks/: callback_controls.py  example_logging_api.py  generic_api_callback.py  llama_guard.py  llm_guard.py  secret_detection.py  session_handler.py
enterprise/litellm_enterprise/enterprise_hooks/: __init__.py  aporia_ai.py  banned_keywords.py  blocked_user_list.py  google_text_moderation.py  openai_moderation.py  session_handler.py
enterprise/litellm_enterprise/integrations/: custom_guardrail.py  prometheus.py
enterprise/litellm_enterprise/litellm_core_utils/: litellm_logging.py
enterprise/litellm_enterprise/proxy/: __init__.py  audit_logging_endpoints.py  enterprise_routes.py  proxy_server.py  readme.md  utils.py
enterprise/proxy/: enterprise_routes.py  readme.md  utils.py
enterprise/proxy/vector_stores/: endpoints.py
guardrails-rs/: Cargo.toml
guardrails-rs/config/: e2e_proxy_config.yaml
guardrails-rs/crates/guardrails/: Cargo.toml
guardrails-rs/crates/guardrails-core/: Cargo.toml
guardrails-rs/crates/guardrails-http/: Cargo.toml
guardrails-rs/crates/guardrails-providers/: Cargo.toml
guardrails-rs/crates/guardrails-pyo3/: Cargo.toml  pyproject.toml
guardrails-rs/crates/guardrails-server/: Cargo.toml
guardrails-rs/scripts/: mock_guardrail.py
litellm-proxy-extras/: README.md  build_and_publish.md  migration_runbook.md  pyproject.toml
litellm-proxy-extras/litellm_proxy/: _types.py  caching_routes.py  common_request_processing.py  custom_sso.py  lambda.py  litellm_pre_call_utils.py  mcp_tools.py  proxy_cli.py  proxy_config.yaml  proxy_server.py  utils.py
litellm-proxy-extras/litellm_proxy/analytics_endpoints/: analytics_endpoints.py
litellm-proxy-extras/litellm_proxy/anthropic_endpoints/: endpoints.py
litellm-proxy-extras/litellm_proxy/auth/: auth_checks.py  auth_checks_organization.py  auth_exception_handler.py  auth_utils.py  handle_jwt.py  model_checks.py  oauth2_check.py  oauth2_proxy_hook.py  route_checks.py  user_api_key_auth.py
litellm-proxy-extras/litellm_proxy/batches_endpoints/: endpoints.py
litellm-proxy-extras/litellm_proxy/common_utils/: admin_ui_utils.py  callback_utils.py  debug_utils.py  encrypt_decrypt_utils.py  http_parsing_utils.py  openai_endpoint_utils.py  proxy_state.py  reset_budget_job.py
litellm-proxy-extras/litellm_proxy/config_management_endpoints/: pass_through_endpoints.py
litellm-proxy-extras/litellm_proxy/credential_endpoints/: endpoints.py
litellm-proxy-extras/litellm_proxy/db/: db_spend_update_writer.py  dynamo_db.py  exception_handler.py  log_db_metrics.py  prisma_client.py
litellm-proxy-extras/litellm_proxy/example_config_yaml/: custom_auth.py  custom_auth_basic.py  custom_callbacks1.py  custom_guardrail.py
litellm-proxy-extras/litellm_proxy/fine_tuning_endpoints/: endpoints.py
litellm-proxy-extras/litellm_proxy_extras/: _logging.py  schema.prisma  utils.py
litellm-proxy-extras/tests/: test_prisma_env_path_injection.py  test_setup_database_fail_fast.py
litellm-pyext/: Cargo.toml
litellm-pyext/src/: lib.rs
litellm-rust/: .gitignore  ADDING_A_PROVIDER.md  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
litellm-rust/.cargo/: config.toml
litellm-rust/crates/ai-gateway/: AGENTS.md  (+10 more)
litellm-rust/providers/: README.md
litellm-rust/src/: error.rs  lib.rs  pipeline.rs
litellm-sidecar/: Cargo.toml
litellm-sidecar/src/: main.rs
provisioning_mcp/: .gitignore  Dockerfile  pyproject.toml
provisioning_mcp/deploy/: deployment.yaml  namespace.yaml  rbac.yaml
provisioning_mcp/tests/: conftest.py  test_auth.py  test_helm.py  test_naming.py  test_provisioner.py  test_resources.py
(+19673 files in other folders)
