[project]
name = "litellm-proxy-extras"
version = "0.4.71"
description = "Additional files for the LiteLLM Proxy. Reduces the size of the main litellm package."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "BerriAI" },
]

[project.urls]
Homepage = "https://litellm.ai"
Repository = "https://github.com/BerriAI/litellm"
Documentation = "https://docs.litellm.ai"

[build-system]
requires = ["uv_build==0.11.8"]
build-backend = "uv_build"

[tool.uv]
required-version = ">=0.10.9"

[tool.uv.build-backend]
module-root = ""

[tool.commitizen]
version = "0.4.71"
version_files = [
    "pyproject.toml:^version",
    "../pyproject.toml:litellm-proxy-extras==",
]
