[package]
name = "litellm_pyext"
version = "0.1.0"
edition = "2021"

[lib]
name = "litellm_pyext"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "stream"], default-features = false }
bytes = "1"
once_cell = "1"
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
