[package]
name = "litellm-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
bytes = "1"
dashmap = "6"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
