[package]
name = "guardrails-providers"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
guardrails-core = { path = "../guardrails-core" }
guardrails-http = { path = "../guardrails-http" }
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
url = "2"

[dev-dependencies]
wiremock.workspace = true
