[package]
name = "guardrails-pyo3"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "_rust"
crate-type = ["cdylib"]

[dependencies]
guardrails = { path = "../guardrails" }
pyo3.workspace = true
pyo3-async-runtimes.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
