[package]
name = "guardrails"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
aws-sigv4.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url = "2"

[dev-dependencies]
wiremock.workspace = true
